[gd_scene load_steps=8 format=2]

[ext_resource path="res://Objects/Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemies/Wool/wool.png" type="Texture" id=2]
[ext_resource path="res://Objects/Enemies/Components/AutoMover.tscn" type="PackedScene" id=3]
[ext_resource path="res://Audio/hit1.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 44.16

[sub_resource type="CircleShape2D" id=2]
radius = 49.1102

[sub_resource type="Animation" id=3]
resource_name = "dmg_flash"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}

[node name="Enemy" type="KinematicBody2D" groups=[
"hurtbox",
]]
collision_layer = 4
collision_mask = 7
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -5 )
texture = ExtResource( 2 )

[node name="BodyShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ThrowPoint" type="Position2D" parent="."]

[node name="AutoMover" parent="." instance=ExtResource( 3 )]

[node name="CollisionArea" type="Area2D" parent="."]

[node name="HurtShape" type="CollisionShape2D" parent="CollisionArea"]
shape = SubResource( 2 )

[node name="DamageAnimationPlayer" type="AnimationPlayer" parent="."]
anims/dmg_flash = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
[connection signal="body_entered" from="CollisionArea" to="." method="_on_CollisionArea_body_entered"]
